--- a/cycle/templates/cycle/cycle.html
+++ b/cycle/templates/cycle/cycle.html
@@ -97,7 +97,7 @@
               <!-- /.card-header -->
               <div class="card-body">
                 <table id="example2" class="table table-bordered table-hover">
-                  <thead>
+                  <thead class="bg-primary">
                   <tr>
                     <th>N°</th>
                     <th>Cycle scolaire</th>
