--- a/eleve/templates/eleve/liste_eleves.html
+++ b/eleve/templates/eleve/liste_eleves.html
@@ -58,7 +58,7 @@
 
     <!-- Tableau des élèves -->
     <table id="elevesTable" class="table table-bordered mt-4">
-        <thead class="table-dark">
+        <thead class="bg-primary">
             <tr>
                 <th>Nom</th>
                 <th>Groupe</th>
