--- a/matiere/templates/matiere/matiere.html
+++ b/matiere/templates/matiere/matiere.html
@@ -111,7 +111,7 @@
               <!-- /.card-header -->
               <div class="card-body">
                 <table id="example2" class="table table-bordered table-hover">
-                  <thead>
+                  <thead class="bg-primary">
                   <tr>
                     <th>N°</th>
                     <th>Niveau d'etude</th>
