--- a/note/templates/note/rechercher_eleve.html
+++ b/note/templates/note/rechercher_eleve.html
@@ -77,7 +77,7 @@
     <!-- Tableau des élèves -->
     <div class="table-responsive mt-4">
         <table id="elevesTable" class="table table-bordered table-striped">
-            <thead>
+            <thead class="bg-primary">
                 <tr>
                     <th>Nom</th>
                     <th>Prénom</th>
