--- a/annee_scolaire/templates/annee/annee.html
+++ b/annee_scolaire/templates/annee/annee.html
@@ -102,7 +102,7 @@
               <!-- /.card-header -->
               <div class="card-body">
                 <table id="example2" class="table table-bordered table-hover">
-                  <thead>
+                  <thead class="bg-primary">
                   <tr>
                     <th>N°</th>
                     <th>Année scolaire</th>
