--- a/eleve/templates/eleve/configuration_niveaux.html
+++ b/eleve/templates/eleve/configuration_niveaux.html
@@ -55,7 +55,7 @@
       {% if eleves %}
       <div class="table-responsive mt-5">
           <table id="elevesTable" class="table table-striped table-bordered mx-auto">
-              <thead class="table-dark">
+              <thead class="bg-primary">
                   <tr>
                       <th style="width: 30%;">Nom</th> <!-- Fix width for the 'Nom' column -->
                       <th style="width: 30%;">Prénom</th>
