--- a/niveau/templates/niveau/niveau.html
+++ b/niveau/templates/niveau/niveau.html
@@ -101,7 +101,7 @@
               <!-- /.card-header -->
               <div class="card-body">
                 <table id="example2" class="table table-bordered table-hover">
-                  <thead>
+                  <thead class="bg-primary">
                     <tr>
                       <th>N°</th>
                       <th>Cycle scolaire</th>
