--- a/templates/base/pages/tables/data.html
+++ b/templates/base/pages/tables/data.html
@@ -143,7 +143,7 @@
               <!-- /.card-header -->
               <div class="card-body">
                 <table id="example1" class="table table-bordered table-striped">
-                  <thead>
+                  <thead class="bg-primary">
                   <tr>
                   <th>N°</th>
                     <th>Nom</th>
@@ -268,11 +268,7 @@
         </div>
     </div>
 </div>
-
-
-
-
-                
+         
 
                     <a href="#" data-toggle="modal" data-target="#supprime{{ ensei.id }}" title="Supprimer">
                         <i class="fas fa-trash text-danger" style="font-size: 1.5rem;"></i>
