--- a/bulletin/templates/bulletins/bulletins_annuels.html
+++ b/bulletin/templates/bulletins/bulletins_annuels.html
@@ -76,7 +76,7 @@
                         <th>Année scolaire</th> {% endcomment %}
                         <th>Trimestre 1</th>
                         <th>Trimestre 2</th>
-                        <th>Moyenne Annuelle</th>
+                        <th>Moyenne </th>
                       </tr>
                     </thead>
                     <tbody>
