--- a/bulletin/templates/bulletins/bulletins_trimestriels.html
+++ b/bulletin/templates/bulletins/bulletins_trimestriels.html
@@ -137,7 +137,7 @@
           <table class="table table-bordered">
             <tr>
               <th>Rang</th>
-              <th>Moyenne Annuelle</th>
+              <th>Moyenne </th>
               <th>Observation</th>
             </tr>
             <tr>
