--- a/bulletin/templates/bulletins/bulletins_option.html
+++ b/bulletin/templates/bulletins/bulletins_option.html
@@ -3,16 +3,60 @@
 
 {% block styl_parent %}
   <title>enseignant | Accueil</title>
-  <!-- Google Font: Source Sans Pro -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
-  <!-- Font Awesome -->
   <link rel="stylesheet" href="{% static 'base/plugins/fontawesome-free/css/all.min.css' %}">
-  <!-- DataTables -->
-  <link rel="stylesheet" href="{% static 'base/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css' %}">
-  <link rel="stylesheet" href="{% static 'base/plugins/datatables-responsive/css/responsive.bootstrap4.min.css' %}">
-  <link rel="stylesheet" href="{% static 'base/plugins/datatables-buttons/css/buttons.bootstrap4.min.css' %}">
-  <!-- Theme style -->
   <link rel="stylesheet" href="{% static 'base/css/adminlte.min.css' %}">
+  <style>
+    /* Masquer certains éléments lors de l'impression */
+    @media print {
+      .form-row, .btn-primary, .btn-success, .breadcrumb, .card-header, .copyright {
+        display: none !important;
+      }
+
+      /* S'assurer que les titres sont bien centrés pour l'impression */
+      .republique, .devise, h1, h2, h3 {
+        text-align: center;
+        font-size: larger;
+        font-weight: bold;
+      }
+
+      /* Saut de page après chaque élève */
+      .eleve-section {
+        page-break-after: always;
+      }
+
+      /* Masquer le footer (copyright) pendant l'impression */
+      footer, .copyright {
+        visibility: hidden;
+      }
+
+      /* Ajouter une bordure verticale entre les colonnes du tableau */
+      table th, table td {
+        border-right: 1px solid #ddd; /* Bordure droite */
+      }
+
+      table th:last-child, table td:last-child {
+        border-right: none; /* Enlever la bordure droite de la dernière colonne */
+      }
+
+      /* Style général pour tous les tableaux */
+      table {
+        width: 100%;
+        border-collapse: collapse;
+      }
+
+      table th, table td {
+        padding: 10px;
+        text-align: left;
+        border: 1px solid #ddd;
+      }
+
+      table th {
+        background-color: #f8f9fa;
+        font-weight: bold;
+      }
+    }
+  </style>
 {% endblock %}
 
 {% block body %}
@@ -25,12 +69,12 @@
       <div class="container-fluid">
         <div class="row mb-2">
           <div class="col-sm-6">
-            <h1>Bulletins Trimestriels 3</h1>
+            <h1>Bulletins Trimestriels par goupe de classe(option)</h1>
           </div>
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
               <li class="breadcrumb-item"><a href="{% url 'home' %}">Accueil</a></li>
-              <li class="breadcrumb-item active">Bulletins Trimestriels</li>
+              <li class="breadcrumb-item active">Bulletins Trimestriels </li>
             </ol>
           </div>
         </div>
@@ -43,83 +87,126 @@
           <div class="col-12">
             <div class="card">
               <div class="card-header">
-                <!-- Formulaire de filtre -->
-                <div class="form-container">
-                  <form method="get">
-                    <div class="form-row">
-                      <div class="form-group col-md-4">
-                        <label for="groupe_classe">Groupe / Classe :</label>
-                        <select name="groupe_classe" id="groupe_classe" class="form-control" required>
-                          <option value="">-- Sélectionnez un groupe / classe --</option>
-                          {% for groupe in groupes_classes %}
-                            <option value="{{ groupe.id }}" {% if request.GET.groupe_classe == groupe.id|stringformat:"s" %}selected{% endif %}>
-                              {{ groupe.nom }}
-                            </option>
-                          {% endfor %}
-                        </select>
-                      </div>
-
-                      <div class="form-group col-md-4">
-                        <label for="annee_scolaire">Année Scolaire :</label>
-                        <select name="annee_scolaire" id="annee_scolaire" class="form-control" required>
-                          <option value="">-- Sélectionnez une année scolaire --</option>
-                          {% for annee in annees_scolaires %}
-                            <option value="{{ annee.id }}" {% if request.GET.annee_scolaire == annee.id|stringformat:"s" %}selected{% endif %}>
-                              {{ annee.nom }}
-                            </option>
-                          {% endfor %}
-                        </select>
-                      </div>
-
-                      <div class="form-group col-md-4">
-                        <label for="trimestre">Trimestre :</label>
-                        <select name="trimestre" id="trimestre" class="form-control" required>
-                          <option value="">-- Sélectionnez un trimestre --</option>
-                          <option value="1" {% if request.GET.trimestre == "1" %}selected{% endif %}>Trimestre 1</option>
-                          <option value="2" {% if request.GET.trimestre == "2" %}selected{% endif %}>Trimestre 2</option>
-                          <option value="3" {% if request.GET.trimestre == "3" %}selected{% endif %}>Trimestre 3</option>
-                        </select>
-                      </div>
+                <form method="get">
+                  <!-- Formulaire pour les critères de recherche -->
+                  <div class="form-row">
+                    <div class="form-group col-md-4">
+                      <label for="groupe_classe">Groupe / Classe :</label>
+                      <select name="groupe_classe" id="groupe_classe" class="form-control" required>
+                        <option value="">-- Sélectionnez un groupe / classe --</option>
+                        {% for groupe in groupes_classes %}
+                          <option value="{{ groupe.id }}" {% if request.GET.groupe_classe == groupe.id|stringformat:"s" %}selected{% endif %}>
+                            {{ groupe.nom }}
+                          </option>
+                        {% endfor %}
+                      </select>
                     </div>
-                    <div class="form-group">
-                      <button type="submit" class="btn btn-primary">Rechercher</button>
+                    <div class="form-group col-md-4">
+                      <label for="annee_scolaire">Année Scolaire :</label>
+                      <select name="annee_scolaire" id="annee_scolaire" class="form-control" required>
+                        <option value="">-- Sélectionnez une année scolaire --</option>
+                        {% for annee in annees_scolaires %}
+                          <option value="{{ annee.id }}" {% if request.GET.annee_scolaire == annee.id|stringformat:"s" %}selected{% endif %}>
+                            {{ annee.nom }}
+                          </option>
+                        {% endfor %}
+                      </select>
                     </div>
-                  </form>
-                </div>
+                    <div class="form-group col-md-4">
+                      <label for="trimestre">Trimestre :</label>
+                      <select name="trimestre" id="trimestre" class="form-control" required>
+                        <option value="">-- Sélectionnez un trimestre --</option>
+                        <option value="1" {% if request.GET.trimestre == "1" %}selected{% endif %}>Trimestre 1</option>
+                        <option value="2" {% if request.GET.trimestre == "2" %}selected{% endif %}>Trimestre 2</option>
+                        <option value="3" {% if request.GET.trimestre == "3" %}selected{% endif %}>Trimestre 3</option>
+                      </select>
+                    </div>
+                  </div>
+                  <button type="submit" class="btn btn-primary">Rechercher</button>
+
+                  <button onclick="imprimer()" class="btn btn-success mt-3">Imprimer Bulletin</button>
+                </form>
+                
               </div>
 
-              <div class="line"></div>
-
-              <!-- Affichage des bulletins -->
-              {% if bulletins_trimestriels %}
-                <div class="card-body">
-                  <table id="bulletinsTable" class="table table-striped table-bordered table-hover">
-                    <thead>
-                      <tr>
-                        <th>Nom de l'élève</th>
-                        <th>Groupe / Classe</th>
-                        <th>Année Scolaire</th>
-                        <th>Matière</th>
-                        <th>Moyenne</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      {% for bulletin in bulletins_trimestriels %}
-                        {% for note in bulletin.notes_par_matiere %}
-                          <tr>
-                            <td>{{ bulletin.eleve.nom }} {{ bulletin.eleve.prenom }}</td>
-                            <td>{{ bulletin.eleve.groupe_classe.nom }}</td>
-                            <td>{{ bulletin.eleve.annee_scolaire.nom }}</td>
-                            <td>{{ note.matiere__nom }}</td>
-                            <td>{{ note.moyenne_matiere }}</td>
-                          </tr>
-                        {% endfor %}
-                      {% endfor %}
-                    </tbody>
-                  </table>
+              <center>
+                <!-- Républiques et devises sur la même page -->
+                <div class="republique">
+                  <h1 style="font-size: 36px; font-weight: bold; color: #0056b3;">RÉPUBLIQUE DE GUINÉE</h1>
                 </div>
+                <div class="devise" style="font-size: 20px; font-style: italic; color: #777777; margin-bottom: 20px;">Travail - Justice - Solidarité</div>
+                
+                <div class="republique">
+                  <h2 style="font-size: 30px; font-weight: bold; color: #0056b3;">Groupe Scolaire Privé BNB</h2>
+                </div>
+                <div class="devise" style="font-size: 20px; font-style: italic; color: #777777; margin-bottom: 20px;">Union - Sincérité - Réussite</div>
+                
+                <h3 style="font-size: 24px; font-weight: normal; color: #333333;">
+                      Bulletin du {{ trimestre }}ᵉ Trimestre
+                  </h3>
+
+              </center>
+
+              {% if bulletins_trimestriels %}
+                {% for bulletin in bulletins_trimestriels %}
+                  <div class="card mb-4 eleve-section"> <!-- Cette section aura un saut de page -->
+                    <div class="card-body">
+                      <table class="table table-bordered">
+                        <thead >
+                          <tr>
+                            <th>Nom</th>
+                            <th>Prénom</th>
+                            <th>Date de naissance</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <td>{{ bulletin.eleve.nom }}</td>
+                            <td>{{ bulletin.eleve.prenom }}</td>
+                            <td>{{ bulletin.eleve.date_naissance }}</td>
+                          </tr>
+                        </tbody>
+                      </table>
+
+                      <!-- Deuxième tableau (matières et moyennes) avec les mêmes styles que le premier -->
+                      <table class="table table-bordered table-striped table-hover mt-3">
+                        <thead >
+                          <tr>
+                            <th>Matière</th>
+                            <th>Moyenne</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          {% for note in bulletin.notes_par_matiere %}
+                            <tr>
+                              <td>{{ note.matiere__nom }}</td>
+                              <td>{{ note.moyenne_matiere }}</td>
+                            </tr>
+                          {% endfor %}
+                        </tbody>
+                      </table>
+
+                      <table class="table table-bordered mt-3">
+                        <thead >
+                          <tr>
+                            <th>Rang</th>
+                            <th>Moyenne</th>
+                            <th>Observation</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <td>{{ bulletin.rang }}</td>
+                            <td>{{ bulletin.moyenne_totale|default:"Non disponible" }}</td>
+                            <td>{{ bulletin.observation }}</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </div>
+                  </div>
+                {% endfor %}
               {% else %}
-                <p>Aucun bulletin trouvé pour les critères sélectionnés.</p>
+                <p class="text-center text-muted">Aucun bulletin trouvé pour les critères sélectionnés.</p>
               {% endif %}
             </div>
           </div>
@@ -130,36 +217,14 @@
 {% endblock %}
 
 {% block scripte %}
-<!-- jQuery -->
 <script src="{% static 'base/plugins/jquery/jquery.min.js' %}"></script>
-<!-- Bootstrap 4 -->
 <script src="{% static 'base/plugins/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-<!-- DataTables & Plugins -->
-<script src="{% static 'base/plugins/datatables/jquery.dataTables.min.js' %}"></script>
-<script src="{% static 'base/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js' %}"></script>
-<script src="{% static 'base/plugins/datatables-responsive/js/dataTables.responsive.min.js' %}"></script>
-<script src="{% static 'base/plugins/datatables-responsive/js/responsive.bootstrap4.min.js' %}"></script>
-<script src="{% static 'base/plugins/datatables-buttons/js/dataTables.buttons.min.js' %}"></script>
-<script src="{% static 'base/plugins/datatables-buttons/js/buttons.bootstrap4.min.js' %}"></script>
-<script src="{% static 'base/plugins/jszip/jszip.min.js' %}"></script>
-<script src="{% static 'base/plugins/pdfmake/pdfmake.min.js' %}"></script>
-<script src="{% static 'base/plugins/pdfmake/vfs_fonts.js' %}"></script>
-<script src="{% static 'base/plugins/datatables-buttons/js/buttons.html5.min.js' %}"></script>
-<script src="{% static 'base/plugins/datatables-buttons/js/buttons.print.min.js' %}"></script>
-<script src="{% static 'base/plugins/datatables-buttons/js/buttons.colVis.min.js' %}"></script>
 <script src="{% static 'base/js/adminlte.min.js' %}"></script>
 
-<!-- Initialisation de DataTables -->
 <script>
-  $(document).ready(function() {
-    $('#bulletinsTable').DataTable({
-      "responsive": true,
-      "autoWidth": false,
-      "lengthChange": false,
-      "paging": true,
-      "info": true,
-      "buttons": ["copy", "excel", "pdf", "print"]
-    }).buttons().container().appendTo('#bulletinsTable_wrapper .col-md-6:eq(0)');
-  });
+  // Fonction d'impression
+  function imprimer() {
+    window.print(); // Ouvre la boîte de dialogue d'impression
+  }
 </script>
 {% endblock %}
