--- a/bulletin/templates/bulletins/imprime2.html
+++ b/bulletin/templates/bulletins/imprime2.html
@@ -112,7 +112,7 @@
 
                 
                 <table class="table table-bordered">
-                  <tr><th>Rang</th><th>Moyenne Annuelle</th><th>Observation</th></tr>
+                  <tr><th>Rang</th><th>Moyenne </th><th>Observation</th></tr>
                   <tr>
                     <td>{{ bulletin.rang|default:"Non classé" }}</td>
                     <td>{{ bulletin.moyenne_totale|default:"-" }}</td> <!-- Assure-toi que la moyenne annuelle est calculée et envoyée dans la vue -->
