--- a/bulletin/templates/bulletins/resultat_annuel_classe.html
+++ b/bulletin/templates/bulletins/resultat_annuel_classe.html
@@ -3,28 +3,17 @@
  {% block styl_parent %}
   <title>enseignant | Accueil</title>
 
-
   <!-- Google Font: Source Sans Pro -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="{% static 'base/plugins/fontawesome-free/css/all.min.css' %}">
-  <!-- DataTables -->
-  <link rel="stylesheet" href="{% static 'base/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css' %}">
-  <link rel="stylesheet" href="{% static 'base/plugins/datatables-responsive/css/responsive.bootstrap4.min.css' %}">
-  <link rel="stylesheet" href="{% static 'base/plugins/datatables-buttons/css/buttons.bootstrap4.min.css' %}">
   <!-- Theme style -->
   <link rel="stylesheet" href="{% static 'base/css/adminlte.min.css' %}">
 {% endblock %}
 
-
-
-
  {% block body %}
 <body class="hold-transition sidebar-mini">
  {% endblock body %}
-
-
-
 
 {% block contenu %}
 <div class="content-wrapper">
@@ -32,7 +21,7 @@
     <div class="container-fluid">
       <div class="row mb-2">
         <div class="col-sm-6">
-          <h1>Résultats des Bulletins</h1>
+          <h1>Résultats trimestriel par groupe de classe</h1>
         </div>
         <div class="col-sm-6">
           <ol class="breadcrumb float-sm-right">
@@ -52,7 +41,6 @@
         </div>
         <div class="card-body">
           <form method="get" class="form-inline">
-            {% comment %} <label for="groupe_classe" class="mr-2">Groupe Classe :</label> {% endcomment %}
             <select name="groupe_classe" id="groupe_classe" class="form-control mr-3" required>
               <option value="">-- Sélectionnez --</option>
               {% for groupe in groupes_classes %}
@@ -62,7 +50,6 @@
               {% endfor %}
             </select>
 
-            {% comment %} <label for="annee_scolaire" class="mr-2">Année Scolaire :</label> {% endcomment %}
             <select name="annee_scolaire" id="annee_scolaire" class="form-control mr-3" required>
               <option value="">-- Sélectionnez --</option>
               {% for annee in annees_scolaires %}
@@ -72,7 +59,6 @@
               {% endfor %}
             </select>
 
-            {% comment %} <label for="trimestre" class="mr-2">Trimestre :</label> {% endcomment %}
             <select name="trimestre" id="trimestre" class="form-control mr-3" required>
               <option value="">-- Sélectionnez --</option>
               <option value="1" {% if request.GET.trimestre == "1" %}selected{% endif %}>Trimestre 1</option>
@@ -82,6 +68,7 @@
 
             <button type="submit" class="btn btn-primary">Rechercher</button>
           </form>
+          <button onclick="imprimer()" class="btn btn-primary mt-3">Imprimer</button>
         </div>
       </div>
 
@@ -90,9 +77,25 @@
       {% endif %}
 
       {% if sorted_bulletins %}
-        <div class="card mt-4">
+        <div class="card mt-4" id="tableau_resultats">
           <div class="card-header">
-            <h3 class="card-title">Résultats</h3>
+            <center>
+                <!-- Républiques et devises sur la même page -->
+                <div class="republique">
+                  <h1 style="font-size: 36px; font-weight: bold; color: #0056b3;">RÉPUBLIQUE DE GUINÉE</h1>
+                </div>
+                <div class="devise" style="font-size: 20px; font-style: italic; color: #777777; margin-bottom: 20px;">Travail - Justice - Solidarité</div>
+                
+                <div class="republique">
+                  <h2 style="font-size: 30px; font-weight: bold; color: #0056b3;">Groupe Scolaire Privé BNB</h2>
+                </div>
+                <div class="devise" style="font-size: 20px; font-style: italic; color: #777777; margin-bottom: 20px;">Union - Sincérité - Réussite</div>
+                
+                <h3 style="font-size: 24px; font-weight: normal; color: #333333;">
+                    Resultat trimestriel par groupe de classe ou option
+                  </h3>
+
+              </center>
           </div>
           <div class="card-body table-responsive">
             <table class="table table-bordered table-hover">
@@ -125,49 +128,23 @@
 </div>
 {% endblock %}
 
-  
-
-  
 {% block scripte %}
-
 
 <!-- jQuery -->
 <script src="{% static 'base/plugins/jquery/jquery.min.js' %}"></script>
 <!-- Bootstrap 4 -->
 <script src="{% static 'base/plugins/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-<!-- DataTables  & Plugins -->
-<script src="{% static 'base/plugins/datatables/jquery.dataTables.min.js' %}"></script>
-<script src="{% static 'base/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js' %}"></script>
-<script src="{% static 'base/plugins/datatables-responsive/js/dataTables.responsive.min.js' %}"></script>
-<script src="{% static 'base/plugins/datatables-responsive/js/responsive.bootstrap4.min.js' %}"></script>
-<script src="{% static 'base/plugins/datatables-buttons/js/dataTables.buttons.min.js' %}"></script>
-<script src="{% static 'base/plugins/datatables-buttons/js/buttons.bootstrap4.min.js' %}"></script>
-<script src="{% static 'base/plugins/jszip/jszip.min.js' %}"></script>
-<script src="{% static 'base/plugins/pdfmake/pdfmake.min.js' %}"></script>
-<script src="{% static 'base/plugins/pdfmake/vfs_fonts.js' %}"></script>
-<script src="{% static 'base/plugins/datatables-buttons/js/buttons.html5.min.js' %}"></script>
-<script src="{% static 'base/plugins/datatables-buttons/js/buttons.print.min.js' %}"></script>
-<script src="{% static 'base/plugins/datatables-buttons/js/buttons.colVis.min.js' %}"></script>
 <!-- AdminLTE App -->
 <script src="{% static 'base/js/adminlte.min.js' %}"></script>
 <!-- AdminLTE for demo purposes -->
 <script src="{% static 'base/js/demo.js' %}"></script>
-<!-- Page specific script -->
 <script>
-  $(function () {
-    $("#example1").DataTable({
-      "responsive": true, "lengthChange": false, "autoWidth": false,
-      "buttons": ["copy", "csv", "excel", "pdf", "print", "colvis"]
-    }).buttons().container().appendTo('#example1_wrapper .col-md-6:eq(0)');
-    $('#example2').DataTable({
-      "paging": true,
-      "lengthChange": false,
-      "searching": false,
-      "ordering": true,
-      "info": true,
-      "autoWidth": false,
-      "responsive": true,
-    });
-  });
+  function imprimer() {
+    var contenu = document.getElementById("tableau_resultats").innerHTML;
+    var originalBody = document.body.innerHTML;
+    document.body.innerHTML = contenu;
+    window.print();
+    document.body.innerHTML = originalBody;
+  }
 </script>
 {% endblock %}
